--- a/responsive/responsive.md.css
+++ b/responsive/responsive.md.css
@@ -113,6 +113,20 @@
     margin-top: 10%;
   }
 
+
+  @media only screen and (min-width: 100px) and (max-width: 767px) {
+    .banner-btn-1{
+      font-size: 13px !important;
+      padding: 5px 12px !important;
+    }
+    .banner-btn-2{
+      font-size: 13px !important;
+      padding: 5px 12px !important;
+    }
+    .single-welcome-slide .welcome-text h5 {
+      margin-bottom: 25px;
+  }
+  }
   /* Mission  */
 
   .mission-heading {
