--- a/responsive/responsive.sm.css
+++ b/responsive/responsive.sm.css
@@ -184,11 +184,13 @@ width: 100%;
 @media only screen and (min-width: 100px) and (max-width: 400px) {
     .banner-btn-1{
       font-size: 13px !important;
-      padding: 5px 12px !important;
+      padding: 6px 12px !important;
+      text-align:center ;
     }
     .banner-btn-2{
       font-size: 13px !important;
-      padding: 5px 12px !important;
+      padding: 6px 12px !important;
+      text-align: center;
     }
     .single-welcome-slide .welcome-text h5 {
       margin-bottom: 20px;
