--- a/responsive/responsive.sm.css
+++ b/responsive/responsive.sm.css
@@ -30,19 +30,19 @@
         height: auto;
     } */
 
-   .driver-cards img{
-    /* width: 140px; */
-   }
+   /* .driver-cards img{
+    width: 140px;
+   } */
 
    .customer-safety-cards{
     width: 75%;
    }
 
-    .driver-cards{
-        /* display: block; */
-        /* width: 100%; */
+    /* .driver-cards{
+        display: block;
+        width: 100%;
 
-    }
+    } */
 
 
     .mission-content h3 {
@@ -69,9 +69,10 @@
         height: auto;
     }
 
-    .safety-top{
-    /* flex-direction: column; */
-    }
+    /* .safety-top{
+    flex-direction: column;
+    } */
+
     .safety-top img{
         width: 200px;
     }
