--- a/css/style.css
+++ b/css/style.css
@@ -313,10 +313,11 @@ input:focus {
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 99999;
+  z-index: 99999999;
   top: 0;
   left: 0;
   background-color: var(--primary-clr);
+  /* background-color: yellow; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
